--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,7 @@ PORT = 3002
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+# config for products service
+PRODUCTS_MS_HOST = localhost
+PRODUCTS_MS_PORT = 3001
