--- a/.env.template
+++ b/.env.template
@@ -9,6 +9,5 @@ PORT = 3002
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 
-# config for products service
-PRODUCTS_MS_HOST = localhost
-PRODUCTS_MS_PORT = 3001
+# NATS_SERVERS="nats://localhost:4222,nats://localhost:4223"
+NATS_SERVERS="nats://localhost:4222"
