--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -20,12 +20,13 @@ COPY --from=deps /usr/src/app/node_modules ./node_modules
 # Copy all the source code from the app
 COPY . .
 
+RUN npx prisma migrate deploy
+RUN npx prisma generate
+
 # Create the build
 RUN npm run build
 
 RUN npm ci -f --only=production && npm cache clean --force
-
-RUN npx prisma generate
 
 # Create the final image from docker---------------------------------
 FROM node:21-alpine3.19 as prod
