--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -12,6 +12,9 @@ RUN npm install
 # Build the app------------------------------------------------------
 FROM node:21-alpine3.19 as build
 
+ARG ORDERS_DATABASE_URL
+ENV DATABASE_URL=$ORDERS_DATABASE_URL
+
 WORKDIR /usr/src/app
 
 # Copy from deps the modules of node
@@ -21,6 +24,7 @@ COPY --from=deps /usr/src/app/node_modules ./node_modules
 COPY . .
 
 RUN npx prisma migrate deploy
+
 RUN npx prisma generate
 
 # Create the build
